--- a/tasks_project/dockerfile
+++ b/tasks_project/dockerfile
@@ -15,5 +15,6 @@ EXPOSE 8080
 
 RUN python manage.py makemigrations tasks_app
 RUN python manage.py migrate
+RUN python -Wa manage.py test
 
 CMD python manage.py runserver 0.0.0.0:8080
